# goit-pythonweb-hw-012

./: .coverage  .env  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test.db
docs/source/: conf.py
src/api/: auth.py  contacts.py  utils.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/schemas/: contact.py  user.py
src/services/: auth.py  cache.py  contacts.py
tests/: conftest.py
tests/integration/: test_contacts.py  test_users.py
tests/unit/test_api/: test_api_urils.py
tests/unit/test_repository/: test_repository_contacts.py  test_repository_users.py
tests/unit/test_services/: test_services_auth.py  test_services_contacts.py
